[package]
name = "minigraf-swift-shim"
version = "0.0.0"
edition = "2024"
publish = false
description = "Swift/iOS binding for Minigraf — bi-temporal graph database"
license = "MIT OR Apache-2.0"

[lib]
name = "minigraf_ffi"
crate-type = ["staticlib", "cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi_bindgen.rs"

[dependencies]
# Pin to the exact released version. The release workflow updates this line.
minigraf = "=1.2.1"
uniffi = { version = "0.31.1", features = ["cli"] }
thiserror = "2.0.18"
serde_json = "1.0.149"
anyhow = "1"

[workspace]
members = ["."]
